Bug 237516 - Open in Terminal command doesn't take KDE systemsettings into account
Summary: Open in Terminal command doesn't take KDE systemsettings into account
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Portability-Interroperability (other bugs)
Version First Reported In: 1.2.0
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-05-13 16:25 UTC by Michiel Wittkampf
Modified: 2017-08-05 15:44 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.5.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michiel Wittkampf 2010-05-13 16:25:44 UTC
Version:           1.2.0 (using 4.4.2 (KDE 4.4.2), Kubuntu packages)
Compiler:          cc
OS:                Linux (i686) release 2.6.32-22-generic

When using the Album->'Open in Terminal' menu option, digiKam tries to open kconsole in stead of the terminal which is set in the KDE systemsettings panel.

It would be user-friendly and as far as I understood in accordance with the KDE guidelines to honor the KDE systemsettings.

It would be especially handy for people who use another desktop environment (such as gnome) but prefer digiKam as a photo tool because one would like to use the default console. And for example in Ubuntu kconsole isn't even installed by default.

Thanxs if someone changes this.
Comment 1 Andi Clemens 2010-10-01 20:54:02 UTC
SVN commit 1181679 by aclemens:

Use KDE system settings for the "Open in Terminal" action.

BUG: 237516

 M  +2 -1      NEWS  
 M  +16 -13    digikam/digikamview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1181679
Comment 2 Michiel Wittkampf 2012-06-27 11:47:23 UTC
Great!

On Wed, Jun 27, 2012 at 12:43 PM, Gilles Caulier
<caulier.gilles@gmail.com>wrote:

> https://bugs.kde.org/show_bug.cgi?id=237516
>
> Gilles Caulier <caulier.gilles@gmail.com> changed:
>
>           What    |Removed                     |Added
>
> ----------------------------------------------------------------------------
>   Version Fixed In|                            |1.5.0
>
> --
> You are receiving this mail because:
> You reported the bug.
>