Use KDE system settings for the "Open in Terminal" action.

BUG: 237516

svn path=/trunk/extragear/graphics/digikam/; revision=1181679